# connectonion-studio

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
assets/: make_wordmark.py
co_studio/: __init__.py  __main__.py  app.py  config.py  creator.py  diagnostics.py  identity.py  logs.py  ports.py  registry.py  sandbox.py  scoped_trust.py  setup_check.py  storage.py  supervisor.py  update_check.py  workspaces.py
co_studio/api/: __init__.py  agents.py  settings_api.py  setup.py  ws.py
co_studio/frontend/: index.html
co_studio/frontend/css/: app.css  appearance.css  onion.css  theme.css
co_studio/frontend/js/: api.js  app.js  diagnostics.js  onion.js  ws.js
co_studio/runner/: __init__.py  co_studio_runner.py
co_studio/templates/: agent.py.tmpl  co_ai_agent.py.tmpl
co_studio/toolkits/: __init__.py  browser.py  file_write.py  files.py  image.py  shell.py  utility.py  web.py
frontend/: index.html
frontend/css/: app.css  theme.css
frontend/js/: app.js  ws.js
macos/: README.md  appcast.xml
macos/ConnectOnionStudio/ConnectOnionStudio/: ConnectOnionStudioApp.swift  Info.plist  StudioServer.swift  WebView.swift
macos/ConnectOnionStudio/ConnectOnionStudio.xcodeproj/: project.pbxproj
macos/ConnectOnionStudio/ConnectOnionStudio.xcodeproj/xcshareddata/xcschemes/: ConnectOnionStudio.xcscheme
macos/ConnectOnionStudio/ConnectOnionStudio/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos/ConnectOnionStudio/ConnectOnionStudioTests/: ConnectOnionStudioTests.swift
macos/ConnectOnionStudio/ConnectOnionStudioUITests/: ConnectOnionStudioUITests.swift  ConnectOnionStudioUITestsLaunchTests.swift
macos/scripts/: build_local.sh  build_release.sh  make_appcast.sh  make_appicon.py  python.entitlements
scripts/: sync_brand_assets.sh
tests/: test_agent_names.py  test_appearance_settings.py  test_capabilities.py  test_co_ai_preset.py  test_custom_agent_quality.py  test_diagnostics_copy.py  test_frontend_appearance.py  test_frontend_capabilities.py  test_frontend_co_ai_contract.py  test_macos_window_lifecycle.py  test_metadata_backward_compatibility.py  test_model_defaults.py  test_scoped_trust.py  test_workspaces.py
